--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 #convenience-logs==1.9.2
 Django==4.2.7
 django-ninja==0.22.2
+django-ninja-extra
 greenlet==3.0.1
 gunicorn==21.2.0
 mssql-django==1.3
