add filters and edit remove customers

--- a/.template.env
+++ b/.template.env
@@ -4,6 +4,6 @@ POSTGRES_DB=
 POSTGRES_USER=
 POSTGRES_PASSWORD=
 
-VAPTEKESYNC_DB=vAptekeSync
-VAPTEKESYNC_USER=
-VAPTEKESYNC_PASSWORD=
+MSSQL_DB=mssql_db
+MSSQL_USER=
+MSSQL_PASSWORD=
